--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,34 @@
-body {
-  background: radial-gradient(circle, 
-      hsla(0, 90%, 45%, 1) 0%,
-      hsla(359, 73%, 39%, 1) 50%, 
-      hsla(0, 3%, 8%, 1) 100%
-    );
+html {
+    background-image: url('/images/theater-screen.jpg'); 
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
 }
-
 
 header {
     text-align: center;
+    margin-top: 200px;
+    margin-bottom: 180px;
+    margin-right: 20px;
 }
+
 h1 {
-    font-family: 'Tourney', sans-serif;
-    font-size: 7rem;
+    font-family: 'Limelight', sans-serif;
+    font-size: 9rem;
     font-optical-sizing: auto;
     font-style: normal;
-    font-weight: bold;
+    font-weight: light;
+    margin-bottom: 0px;
 }
+
 header p {
-    font-family: 'Tourney', sans-serif;
-    font-size: 2rem;
+    font-family: 'Limelight', sans-serif;
+    font-size: 2.5rem;
     font-optical-sizing: normal;
     font-style: italic;
-    font-weight: bolder;
+    font-weight: lighter;
+    max-width: 47rem;
+    margin: 20px auto;
 }
 
 .bttn-and-descrip {
@@ -45,4 +51,13 @@ button {
     padding: 1.5rem;
     background: #000000;
     color: #f5f5f5;	
+}
+
+
+/*body {
+  background: radial-gradient(circle, 
+      hsla(0, 90%, 45%, 1) 0%,
+      hsla(359, 73%, 39%, 1) 50%, 
+      hsla(0, 3%, 8%, 1) 100%
+    );
 }
