--- a/css/findFave.css
+++ b/css/findFave.css
@@ -7,5 +7,33 @@ html {
 
 header {
     text-align: center;
-    color: white;
+    background-color: red;
+    color: black;
+    border-radius: 25px;
+    width: 300px;
+    margin: 0 auto;
+}
+
+h1 {
+    font-family: 'Limelight', sans-serif;
+    font-size: 2.0rem;
+    font-style: normal;
+    font-weight: light;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 65vh;
+}
+
+.search-bar {
+    border: 5px solid red;
+    border-radius: 70px;
+    text-align: center;
+    padding: 70px;
+    margin: 0 auto;
+    width: 500px;
+    background-color: black;
 }
