--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,13 @@ h1 {
     font-size: 9rem;
     font-optical-sizing: auto;
     font-style: normal;
-    font-weight: light;
+    font-weight: 300px;
     margin-bottom: 0px;
 }
 
 header p {
     font-family: 'Limelight', sans-serif;
-    font-size: 2.5rem;
-    font-optical-sizing: normal;
+    font-size: 2rem;
     font-style: italic;
     font-weight: lighter;
     max-width: 47rem;
@@ -45,12 +44,16 @@ button {
 }
 
 .button-1, .button-2, .button-3 {
-    border: 2px solid black;
+    border: 2px solid red;
     border-radius: 1rem;
     text-align: center;
     padding: 1.5rem;
-    background: #000000;
     color: #f5f5f5;	
+    background: radial-gradient( 
+      hsla(0, 90%, 45%, 1) 0%,
+      hsla(359, 73%, 39%, 1) 50%, 
+      hsla(0, 3%, 8%, 1) 100%
+    );
 }
 
 
