--- a/css/findFave.css
+++ b/css/findFave.css
@@ -37,3 +37,14 @@ main {
     width: 500px;
     background-color: black;
 }
+
+#filmography {
+    background-color: rgba(0, 0, 0, 0.85);
+    color: white;
+    padding: 2rem;
+    margin: 2rem auto;
+    border-radius: 15px;
+    width: 80%;
+    max-width: 800px;
+    text-align: left;
+}
