--- a/css/randomPicks.css
+++ b/css/randomPicks.css
@@ -3,6 +3,7 @@ html {
     background-size: cover;
     background-position: center;
     height: 100vh;
+    font-family: 'Cormorant Garamond', sans-serif;
 }
 
 header {
@@ -12,22 +13,46 @@ header {
     border-radius: 25px;
     width: 300px;
     margin: 0 auto;
+    font-size: 1.0rem;
 }
 
-.instructions {
-    text-align: center;
-    margin: 0 auto;
-    max-width: 800px;
-}
-
-ol {
+body {
+    color: white;
     display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 1rem;;
-    gap: 1rem;
-    border: 2px solid white;
-    color: red;
-    border-radius: 5px;
-
+    flex-direction: column;
+    align-items: center;
 }
+
+.dropdown-menu {
+    text-align: center;
+    margin-top: 150px;
+    margin-right: 125px;
+    background-color: rgba(44, 44, 44, 0.7);
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 40px 8px rgba(0, 0, 0, 0.6);
+    width: 300px;
+}
+
+.dropdown-menu h3 {
+    font-size: 2.5rem;
+    color: #ffcc00;
+    text-shadow: 2px 2px 2px black;
+}
+
+label {
+    font-size: 1.5rem;
+    margin-right: 30px;
+}
+
+select {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+    border: 2px solid #444;
+    border-radius: 10px;
+    background-color: #1a1a1a;
+    color: #fff;
+    font-family: inherit;
+}
+
