--- a/css/randomPicks.css
+++ b/css/randomPicks.css
@@ -66,7 +66,7 @@ header h1 {
     box-shadow: 0 0 8px rgba(255, 204, 0, 0.3);
 }
 
-.genre-btn hover {
+.genre-btn:hover {
     background-color: #ffcc00;
     color: #1a1a1a;
     box-shadow: 0 0 12px #ffcc00;
@@ -74,25 +74,64 @@ header h1 {
 
 .results-container {
     display: none;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-top: 15rem;
-    margin-left: 40rem;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0.6);
+    margin-top: 1rem;
+    margin-left: 2rem;
     padding: 2rem;
     border-radius: 15px;
-    width: 500px;
-    min-height: 420px;
+    width: 1000px;
+    max-width: 70vw;
     color: white;
-    box-shadow: 0 0 20px rgba(0,0,0,0.6);
+    gap: 1rem;
 }
 
 .movie-card {
-    margin-bottom: 1rem;
-    background-color: rgba(255, 255, 255, 0.05);
+    margin: auto;
     padding: 1rem;
-    border: 1px solid #ffcc00;
-    border-radius: 10px;
-    box-shadow: 0 0 8px rgba(255, 204, 0, 0.3);
+    text-align: center;
+    width: 150px;
+    opacity: 0;
+    animation: fadeIn 0.6s ease forwards;
+}
+
+.movie-card img {
+    height: 270px;
+    width: auto;
+    border-radius: 8px;
+    margin-bottom: 0.5rem;
+    object-fit: cover;
+    gap: 1rem;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+
+
+/*.results-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 2rem;
+    margin-left: 3rem;
+    padding: 2rem;
+    border-radius: 15px;
+    width: 1000px;
+    min-height: 420px;
+    color: white;
+    gap: 1rem;
 }
