Added a frontend folder and got my backend up and running for the most part

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url('/images/theater-screen.jpg'); 
+    background-image: url('../images/theater-screen.jpg'); 
     background-size: cover;
     background-position: center;
     height: 100vh;
