--- a/frontend/css/findFave.css
+++ b/frontend/css/findFave.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url('/images/movie-theater-1.jpg'); 
+    background-image: url('../images/movie-theater-1.jpg'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed; 
