--- a/frontend/css/findFave.css
+++ b/frontend/css/findFave.css
@@ -12,12 +12,12 @@ header {
     color: black;
     border-radius: 25px;
     width: 300px;
-    margin: 0 auto;
+    margin: 0 auto 0 37rem;
 }
 
 h1 {
     font-family: 'Limelight', sans-serif;
-    font-size: 2.0rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 300;
 }
@@ -84,8 +84,7 @@ main {
     cursor: pointer;
     margin-top: 15px;
     display: block;
-    margin-left: 4.5rem;
-    margin-right: auto;
+    margin: 15px auto 0 4.5rem;
     transition: transform 0.2s, box-shadow 0.2s;
 }
 
@@ -108,6 +107,25 @@ main {
     border-radius: 15px;
     max-width: 800px;
     text-align: left;
+}
+
+footer {
+    margin-top: 3.5rem;
+    text-align: center;
+}
+
+footer a {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 1rem;
+    color: black;
+    border: 2px solid red;
+    border-radius: 4rem;
+    padding: 1rem;
+    background: red;
+}
+
+footer a:hover {
+    color: gold;
 }
 
 .layout-results {
@@ -183,7 +201,6 @@ main {
     transform: scale(1.05);
     box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
     transition: all 0.3s ease-in-out;
-    transform: scale(1.05);
 }
 
 .person-img {
@@ -222,4 +239,65 @@ main {
     width: 100%;
     border-radius: 1rem;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+@media (max-width: 768px) {
+    header {
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    .dropdown-search {
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+        margin: 1rem auto;
+        width: 80%;
+        border-radius: 2rem;
+    }
+
+    #role-select,
+    #search-input,
+    #search-btn {
+        margin: 0.5rem auto;
+        width: 80%;
+        max-width: 300px;
+        font-size: 1rem;
+        justify-content: center;
+    }
+
+    #search-btn {
+        margin-top: 1rem;
+    }
+
+    .layout-results {
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        width: 95%;
+        padding: 1rem;
+    }
+
+    .filmography,
+    .person-container,
+    .person-info {
+        width: 100%;
+        max-width: 100%;
+        text-align: center;
+    }
+
+    footer {
+        margin: 2rem auto;
+        text-align: center;
+    }
+
+    footer a {
+        font-size: 1rem;
+        padding: 0.75rem 1.5rem;
+    }
 }
